--- a/src/app/components/auth/customer-info/user-info/user-info.component.html
+++ b/src/app/components/auth/customer-info/user-info/user-info.component.html
@@ -1,14 +1,14 @@
 <form class="usef-info-form">
     <div class="form-group">
-      <label for="">Họ tên</label>
+      <label for="" class="fs13">Họ tên</label>
       <input type="text" class="form-control">
     </div>
     <div class="form-group">
-      <label for="">Số điện thoại </label>
+      <label for="" class="fs13">Số điện thoại </label>
       <input type="text" class="form-control">
     </div>
     <div class="form-group">
-      <label for="">Email</label>
+      <label for="" class="fs13">Email</label>
       <input type="text" class="form-control">
     </div>
     <button class="btn btn-warning">Cật nhật</button>
