--- a/src/app/containers/auth/customer-info/customer-info.component.scss
+++ b/src/app/containers/auth/customer-info/customer-info.component.scss
@@ -37,3 +37,28 @@
     // background-color: rgb(255, 255, 255);
     border-radius: 4px;
 }
+
+.customer-info-nav--item{
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    padding: 7px 18px;
+    color: rgb(74, 74, 74);
+}
+
+.customer-info-nav--item-active{
+    background-color: rgb(236, 236, 236);
+    color: rgb(0, 0, 0);
+}
+
+.customer-info-icon{
+    width: 24px;
+    height: 24px;
+    margin: 0px 22px 0px 0px;
+    font-size: 24px;
+    color: rgb(155, 155, 155);
+}
+
+.customer-info-text-content{
+    font-size: 14px;
+}
