--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -157,6 +157,15 @@
     padding: 8px 10px;
 }
 
+.user-account{
+    list-style-type: none;
+    padding-bottom: 1rem;
+}
+
+ul.user-account li{
+    margin-top: 0.5rem;
+}
+
 @media only screen and (max-width: 992px) {
     .header-lg{
         display: none;
