--- a/src/app/containers/auth/customer-info/customer-info.component.html
+++ b/src/app/containers/auth/customer-info/customer-info.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="user-name">
         <p class="fs13 mb-0 text-muted fw300">Tài khoản của</p>
-        <h6 class="">{{customer_info?.name}}</h6>
+        <h6 class="text-capitalize">{{customer_info?.name}}</h6>
       </div>
     </div>
       <nav class="nav flex-column">
