--- a/src/app/components/auth/customer-info/address/address.component.html
+++ b/src/app/components/auth/customer-info/address/address.component.html
@@ -4,16 +4,16 @@
     Thêm địa chỉ mới
   </div>
   
-  <div class="user-info-address">
+  <div *ngFor="let item of list_user_address" class="user-info-address">
     <ul>
-      <li class="user-info--name">{{'username'}}</li>
-      <li class="user-info--address"><span>Địa chỉ:</span> Tòa Nhà 97 99 láng hạ, Phường Láng Hạ, Quận Đống Đa, Hà Nội</li>
-      <li class="user-info--phone"><span>Điện thoại:</span> 0969296064</li>
+      <li class="user-info--name">{{this.customer_info?.name}}</li>
+      <li class="user-info--address"><span>Địa chỉ:</span> {{item.address}}</li>
+      <li class="user-info--phone"><span>Điện thoại:</span> {{this.customer_info?.phone}}</li>
     </ul>
   
     <div class="user-infor-address--action">
-      <a class="text-primary cursor-pointer mr-2" (click)="editAddress('123')">Chỉnh sửa</a>
-      <a class="text-danger cursor-pointer" (click)="deleteAddress('123')">Xóa</a>
+      <a class="text-primary cursor-pointer mr-2" (click)="editAddress(item.id)">Chỉnh sửa</a>
+      <a class="text-danger cursor-pointer" (click)="deleteAddress(item.id)">Xóa</a>
     </div>
   </div>
 
@@ -101,6 +101,13 @@
         <label class="form-check-label fs13" for="inlineRadio2"> Công ty / Cơ quan </label>
       </div>
     </div> -->
+
+    <div class="form-group">
+      <div class="form-check form-check-inline">
+        <input (change)="setAddressDefault($event.target.checked)" class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+        <label class="form-check-label fs13" for="inlineRadio1">Đặt làm địa chỉ mặc định</label>
+      </div>
+    </div>
 
     <button type="submit" class="btn btn-warning mt-3">Cật nhật</button>
 </form>
