--- a/src/app/containers/customer-info/customer-info.component.html
+++ b/src/app/containers/customer-info/customer-info.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
       <nav class="nav flex-column">
-          <a class="nav-link customer-info-nav--item" [routerLink]="['/tai-khoan//chinh-sua']" [routerLinkActive]="['customer-info-nav--item-active']">
+          <a class="nav-link customer-info-nav--item" [routerLink]="['/tai-khoan/chinh-sua']" [routerLinkActive]="['customer-info-nav--item-active']">
             <i class='bx bxs-user customer-info-icon'></i>
             <span class="customer-info-text-content">Thông tin tài khoản</span>
           </a>
