--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,7 @@ html, body {
 .content{
     background-color: #F4F4F4;
     padding: 18px 0 5px;
-    height: 100%;
+    height: auto;
 }
 
 .container{
