--- a/src/app/components/auth/address/address-form/address-form.component.html
+++ b/src/app/components/auth/address/address-form/address-form.component.html
@@ -5,10 +5,15 @@
                     customer_address.ward_id !== '0' && 
                     saveUserAddress()" 
         class="address-info-form">
-    <!-- <div class="form-group">
+    <div *ngIf="orderView" class="form-group">
       <label for="" class="fs13" >Họ tên</label>
-      <input type="text" class="form-control">
-    </div> -->
+      <input type="text" class="form-control"
+              [(ngModel)]="customer_address.full_name" 
+              name="name"  #name="ngModel" required>
+        <p *ngIf="userAddressForm.submitted && name.invalid" class="text-danger fs12 mt-1"> 
+            Trường này không được bỏ trống
+        </p>
+    </div>
     <div class="form-group">
       <label for="" class="fs13" >Số điện thoại </label>
       <input type="tel" class="form-control" 
@@ -79,12 +84,12 @@
       </div>
     </div> -->
 
-    <div class="form-group">
+    <div *ngIf="!orderView" class="form-group">
       <div class="form-check form-check-inline">
         <input (change)="setAddressDefault($event.target.checked)" class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1">
         <label class="form-check-label fs13" for="inlineRadio1">Đặt làm địa chỉ mặc định</label>
       </div>
     </div>
 
-    <button type="submit" class="btn btn-warning mt-3">Cật nhật</button>
+    <button [style.display]="orderView ? 'none' : ''" type="submit" class="btn btn-warning mt-3" id="btn_submit">Cật nhật</button>
 </form>
