--- a/src/app/containers/continue-to-pay/continue-to-pay.component.html
+++ b/src/app/containers/continue-to-pay/continue-to-pay.component.html
@@ -1,4 +1,27 @@
-<p>
-  continue-to-pay works!
-</p>
-<app-address-form></app-address-form>
+<h5>THÔNG TIN GIAO HÀNG</h5>
+<div class="row">
+  <div class="col-md-7 col--12">
+    <app-address-form [orderView]="true" (dataAddress)="dataAddress($event)"></app-address-form>
+  </div>
+  <div class="col-md-5 col--12">
+    <div class="card card-body border-0">
+      <h5>Đơn hàng</h5>
+      <hr>
+      <ul>
+        <li *ngFor="let item of listProductOrder" class="row mt-2">
+          <p class="product--name fs13 col-8">
+            <span *ngIf="item?.gift" class="gift-box">Quà tặng</span>
+            {{ (item?.product_name.length > 50)? (item?.product_name | slice:0:50)+'...':(item?.product_name)}}
+          </p>
+          <p class="product--price fs13 col text-end">{{item?.price | number}} đ</p>
+        </li>
+      </ul>
+      <hr>
+      <div class="total--amount d-flex justify-content-between mb-3">
+        <span class="fs18 fw500">Thành tiền</span>
+        <span class="text-danger fs18 fw500">{{totalAmount | number}}</span>
+      </div>
+      <button class="btn btn-danger" (click)="createOrder()">Hoàn tất đặt hàng</button>
+    </div>
+  </div>
+</div>
