--- a/src/app/containers/shopping-cart/shopping-cart.component.scss
+++ b/src/app/containers/shopping-cart/shopping-cart.component.scss
@@ -23,13 +23,20 @@
     width: 170px;
 }
 .product-gift{
-    padding: 0 100px;
     margin-top: 30px;
 }
 .product-gift img{
     width: 50px;
     display: inline-block;
     margin-right: 8px;
+}
+
+.gift-box{
+    background-color: #D2EFFD;
+    border-radius: 3px;
+    color: #017FFF;
+    font-size: 12px;
+    padding: 2px 6px;
 }
 
 @media (max-width: 768px) {
