--- a/src/app/components/auth/address/address/address.component.html
+++ b/src/app/components/auth/address/address/address.component.html
@@ -21,5 +21,5 @@
 
 
 <ng-template [ngIf]="show_address_form">
-  <app-address-form [orderView]="false"></app-address-form>
+  <app-address-form [orderView]="false" (listUserAddress)="listUserAddressChange($event)"></app-address-form>
 </ng-template>
