--- a/src/app/components/auth/address/address/address.component.scss
+++ b/src/app/components/auth/address/address/address.component.scss
@@ -39,6 +39,11 @@
     padding: 20px;
 }
 
+.default-address{
+    color: #88BC76;
+    font-size: 13px;
+    text-transform: capitalize;
+}
 
 @media (max-width: 768px) {
     .user-info-address{
