--- a/src/app/components/auth/address/address-form/address-form.component.html
+++ b/src/app/components/auth/address/address-form/address-form.component.html
@@ -86,7 +86,7 @@
 
     <div *ngIf="!orderView" class="form-group">
       <div class="form-check form-check-inline">
-        <input (change)="setAddressDefault($event.target.checked)" class="form-check-input" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+        <input (change)="setAddressDefault($event.target.checked)" class="form-check-input" [checked]="set_default_address_user == 1" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1">
         <label class="form-check-label fs13" for="inlineRadio1">Đặt làm địa chỉ mặc định</label>
       </div>
     </div>
