--- a/src/app/containers/shopping-cart/shopping-cart.component.html
+++ b/src/app/containers/shopping-cart/shopping-cart.component.html
@@ -2,6 +2,10 @@
   <h2 class="fs18 fw400 text-uppercase">Giỏ hàng</h2>
   <div *ngIf="data.length > 0" class="row">
     <div class="col-12 col-md-8 col-xl-9">
+      <div class="form-check form-check-inline bg-white col-12 p-3">
+        <input (change)="setAddressDefault($event.target.checked)" class="form-check-input" [checked]="set_default_address_user == 1" type="checkbox" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+        <label class="form-check-label fs13" for="inlineRadio1"> <b>Tất cả(3 sản phẩm)</b> </label>
+      </div>
       <ng-container *ngFor="let item of data">
         <div *ngIf="!item?.gift" class="card card-body deal-item">
             <ul class="list-cart">
@@ -99,7 +103,7 @@
     <div class="card-body text-center">
       <i class='bx bx-check-circle fs50 text-primary'></i>
       <p class="text-primary fs24 fw500">Đặt hàng thành công</p>
-      <p class="fs16">Mã đơn hàng của bạn</p>
+      <p class="fs16">Mã đơn hàng của bạn: <b>{{codeOrder}}</b></p>
       <p class="fs13">Bạn sẽ nhận được chi tiết đơn hàng trong email <span class="text-primary">example@mail.com</span></p>
     </div>
   </div>
