--- a/src/app/containers/shopping-cart/shopping-cart.component.scss
+++ b/src/app/containers/shopping-cart/shopping-cart.component.scss
@@ -39,6 +39,11 @@
     padding: 2px 6px;
 }
 
+.product-thumb{
+    display: flex;
+    align-items: center;
+}
+
 @media (max-width: 768px) {
     .product-content-price{
         align-items: flex-end;
