--- a/src/app/containers/shopping-cart/shopping-cart.component.html
+++ b/src/app/containers/shopping-cart/shopping-cart.component.html
@@ -4,7 +4,7 @@
     <div class="col-12 col-md-8 col-xl-9">
       <div class="form-check form-check-inline bg-white col-12 p-3">
         <input type="checkbox" [checked]="isAllChecked()" (change)="checkAllOptions($event)" class="mr-3">
-        <label class="form-check-label fs13" for="inlineRadio1"> <b>Tất cả(3 sản phẩm)</b> </label>
+        <label class="form-check-label fs13" for="inlineRadio1"> <b>Tất cả({{totalProduct}} sản phẩm)</b> </label>
       </div>
       <ng-container *ngFor="let seller_item of data">
         <div *ngIf="!item?.gift" class="card card-body deal-item">
