--- a/src/app/containers/customer-info/customer-info.component.html
+++ b/src/app/containers/customer-info/customer-info.component.html
@@ -18,6 +18,10 @@
             <i class='bx bxs-edit-location customer-info-icon' ></i>
             <span class="customer-info-text-content">Sổ địa chỉ</span>
           </a>
+          <a class="nav-link customer-info-nav--item"  [routerLink]="['/tai-khoan/lich-su-don-hang']"  [routerLinkActive]="['customer-info-nav--item-active']">
+            <i class='bx bxs-shopping-bags customer-info-icon' ></i>
+            <span class="customer-info-text-content">Đơn hàng</span>
+          </a>
       </nav>
   </div>
   <div class="col-12 col-md-9">
