--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -2,7 +2,9 @@
   <section class="container">
     <div class="row">
       <div class="col-md-3 col-12">
-        <h6>Liên hệ Rẻ Quá</h6>
+        <h6>
+          <b>Liên hệ Rẻ Quá</b>
+        </h6>
         <p class="text-success mb-0">HOTLINE: (+84) 365365060</p>
         <p class="text-muted">(T2 đến T7: 8h00 – 20h00)</p>
         <p class="text-muted fs13">Tòa nhà Hesco, Số 135 Trần phú, Văn Quán, Hà Đông, Hà Nội</p>
@@ -15,8 +17,9 @@
             <a class="btn-social btn-youtube" href=""><i class='bx bxl-youtube'></i></a>
         </div>
       </div>
-      <div class="col-md-3 col-12">
-        <h6>Về chúng tôi</h6>
+
+      <div class="col-md-3 col-12 mt-sm-5 mt-5 mt-md-0">
+        <h6> <b>Về chúng tôi</b> </h6>
         <p>Phương thức thanh toán</p>
         <div class="d-flex payment--method">
           <img src="../../../assets/imgs/full-color-800x450-1.jpg" alt="">
@@ -25,11 +28,13 @@
           <img src="../../../assets/imgs/vdtt.jpg" alt="">
         </div>
       </div>
-      <div class="col-md-3 col-12">
-        <h6>Hỏi đáp và chính sách</h6>
+
+      <div class="col-md-3 col-12 mt-sm-5 mt-5 mt-md-0">
+        <h6> <b>Hỏi đáp và chính sách</b> </h6>
       </div>
-      <div class="col-md-3 col-12">
-        <h6>Tải ứng dụng Requa.vn</h6>
+
+      <div class="col-md-3 col-12 mt-sm-5 mt-5 mt-md-0">
+        <h6> <b>Tải ứng dụng Requa.vn</b> </h6>
       </div>
     </div>
   </section>
