--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -35,6 +35,14 @@
 
       <div class="col-md-3 col-12 mt-sm-5 mt-5 mt-md-0">
         <h6> <b>Tải ứng dụng Requa.vn</b> </h6>
+        <p class="fs14 text-muted">- Khuyến mại cực lớn trên ứng dụng</p>
+        <p class="fs14 text-muted">- Hỗ trợ trên iOS & Android</p>
+        <div class="d-flex">
+          <a href="https://play.google.com/store/apps?hl=en&gl=US" target="blank"><img class="img-fluid p-2" src="../../../assets/imgs/app-store.jpg" alt=""></a>
+          <a href="https://apps.apple.com/us/app/apple-store/id375380948" target="blank"><img class="img-fluid p-2" src="../../../assets/imgs/google-play.jpg" alt=""></a>
+        </div>
+        <p class="text-muted fs14 mt-3">© 2021 Requa.vn  –  Kênh mua sắm với giá rẻ nhất, chất lượng tốt nhất</p>
+        <img class="img-fluid p-2" src="../../../assets/imgs/dmca-badge-w200-5x1-10.png" alt="">
       </div>
     </div>
   </section>
