--- a/src/app/components/auth/customer-info/order-history/order-history.component.scss
+++ b/src/app/components/auth/customer-info/order-history/order-history.component.scss
@@ -2,3 +2,14 @@ td{
     max-width: 200px;
     min-width: 150px;
 }
+
+.order--spacing{
+    background-color: #F4F4F4;
+    height: 1rem;
+    width: 100%;
+    padding: 0;
+}
+
+@media (max-width: 992px) {
+    
+}
