--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="container" style="height: 100px;">
     <div class="header-top">
       <a class="logo" routerLink="/">
-        <img width="100" src="http://static.muahoantien.com/uploads/library/logo_requa_vn.png" class="img-fluid" alt="">
+        <img width="100" src="../../../assets/imgs/logo_requa_vn.png" class="img-fluid" alt="">
       </a>
       <div id="categoryBox" class="header-top-item content-dropdown">
         <div class="menu-box">
