--- a/src/app/components/auth/customer-info/order-history/order-history.component.html
+++ b/src/app/components/auth/customer-info/order-history/order-history.component.html
@@ -36,7 +36,7 @@
           <p class="text-muted fs13">{{item?.total_price | number}} ₫</p>
         </div>
         <div class="col-12">
-          <a class="btn btn-outline-primary btn-block">Xem chi tiết</a>
+          <a [routerLink]="['/tai-khoan/don-hang', item?.order_id]" class="btn btn-outline-primary btn-block">Xem chi tiết</a>
         </div>
       </div>
     </div>
