--- a/src/app/components/auth/customer-info/order-history-detail/order-history-detail.component.html
+++ b/src/app/components/auth/customer-info/order-history-detail/order-history-detail.component.html
@@ -33,7 +33,7 @@
     <div class="order--spacing"></div>
   </div>
   <div class="order-detail--total-price p-3 bg-white mt-3">
-    <p>Tổng cộng <span class="text-danger mb-0">{{orderDetail.total_price | number}}</span></p>
+    <p>Tổng cộng <span class="text-danger mb-0">{{orderDetail?.total_price | number}}</span></p>
     <p></p>
   </div>
 </section>
