--- a/src/app/containers/continue-to-pay/continue-to-pay.component.html
+++ b/src/app/containers/continue-to-pay/continue-to-pay.component.html
@@ -1,34 +1,50 @@
 <ng-template [ngIf]="!orderSuccess">
-  <h5>THÔNG TIN GIAO HÀNG</h5>
-  <div class="row">
-    <div class="col-md-7 col--12">
-      <app-address-form [orderView]="true" (dataAddress)="dataAddress($event)"></app-address-form>
-    </div>
-    <div class="col-md-5 col--12">
-      <div class="card card-body border-0">
-        <h5>Đơn hàng</h5>
-        <hr>
-        <ul>
-          <li *ngFor="let item of listProductOrder" class="row mt-2">
-            <p class="product--name fs13 col-8">
-              {{ (item?.product_name.length > 50)? (item?.product_name | slice:0:50)+'...':(item?.product_name)}}
-            </p>
-            <p class="product--price fs13 col text-end">{{item.price | number}} đ</p>
-            <ng-template [ngIf]="item?.product_attached.name">
+  <ng-template [ngIf]="listProductOrder.length > 0">
+    <h5>THÔNG TIN GIAO HÀNG</h5>
+    <div class="row">
+      <div class="col-md-7 col--12">
+        <app-address-form [orderView]="true" (dataAddress)="dataAddress($event)"></app-address-form>
+      </div>
+      <div class="col-md-5 col--12">
+        <div class="card card-body border-0">
+          <h5>Đơn hàng</h5>
+          <hr>
+          <ul>
+            <li *ngFor="let item of listProductOrder" class="row mt-2">
               <p class="product--name fs13 col-8">
-                <span class="gift-box">Quà tặng</span>
-                {{ (item.product_attached?.name.length > 50)? (item.product_attached?.name | slice:0:50)+'...':(item.product_attached?.name)}}
+                {{ (item?.product_name.length > 50)? (item?.product_name | slice:0:50)+'...':(item?.product_name)}}
               </p>
-              <p class="product--price fs13 col text-end">{{item.product_attached?.price | number}} đ</p>
-            </ng-template>
-          </li>
-        </ul>
-        <hr>
-        <div class="total--amount d-flex justify-content-between mb-3">
-          <span class="fs18 fw500">Thành tiền</span>
-          <span class="text-danger fs18 fw500">{{totalAmount | number}}</span>
+              <p class="product--price fs13 col text-end">{{item.price | number}} đ</p>
+              <ng-template [ngIf]="item?.product_attached.name">
+                <p class="product--name fs13 col-8">
+                  <span class="gift-box">Quà tặng</span>
+                  {{ (item.product_attached?.name.length > 50)? (item.product_attached?.name | slice:0:50)+'...':(item.product_attached?.name)}}
+                </p>
+                <p class="product--price fs13 col text-end">{{item.product_attached?.price | number}} đ</p>
+              </ng-template>
+            </li>
+          </ul>
+          <hr>
+          <div class="total--amount d-flex justify-content-between mb-3">
+            <span class="fs18 fw500">Thành tiền</span>
+            <span class="text-danger fs18 fw500">{{totalAmount | number}}</span>
+          </div>
+          <button class="btn btn-danger" (click)="createOrder()">Hoàn tất đặt hàng</button>
         </div>
-        <button class="btn btn-danger" (click)="createOrder()">Hoàn tất đặt hàng</button>
+      </div>
+    </div>
+  </ng-template>
+
+  <div *ngIf="listProductOrder.length === 0" class="row">
+    <div class="col-12">
+      <div class="card card-body">
+        <div class="empty-thumb">
+          <img class="img-fluid" src="../../../assets/imgs/mascot@2x.png" alt="">
+        </div>
+        <div class="empty-content text-center mt-5">
+          <p>Không có sản phẩm nào trong giỏ hàng của bạn</p>
+          <a routerLink="/" class="btn btn-warning">Tiếp tục mua sắm</a>
+        </div>
       </div>
     </div>
   </div>
