them nut tiep tuc mua sam

--- a/src/app/containers/continue-to-pay/continue-to-pay.component.html
+++ b/src/app/containers/continue-to-pay/continue-to-pay.component.html
@@ -58,5 +58,6 @@
       <p class="text-primary fs24 fw500">Đặt hàng thành công</p>
       <p class="fs16">Mã đơn hàng của bạn: <b>{{codeOrder}}</b></p>
       <p class="fs13">Bạn sẽ nhận được chi tiết đơn hàng trong email <span class="text-primary">example@mail.com</span></p>
+      <a routerLink="/" class="btn btn-warning">Tiếp tục mua sắm</a>
     </div>
   </div>
