--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -42,6 +42,7 @@
             <ul class="list-style-none border-bottom user-account">
               <li><a routerLink="/tai-khoan/chinh-sua" class="text-muted text-decoration-none fs13 fw500 d-block">Tài khoản của tôi</a></li>
               <li><a routerLink="/tai-khoan/dia-chi" class="text-muted text-decoration-none fs13 fw500 d-block">Sổ địa chỉ</a></li>
+              <li><a routerLink="/tai-khoan/don-hang" class="text-muted text-decoration-none fs13 fw500 d-block">Lịch sử đơn hàng</a></li>
             </ul>
             <a (click)="logOut()" class="btn btn-danger btn-block mt-2">Đăng xuất</a>
           </ng-template>
@@ -88,7 +89,7 @@
     </div>
     <div id="logo-sm" class="logo-sm">
       <a routerLink="/">
-        <img class="img-fluid" src="http://static.muahoantien.com/uploads/library/logo_requa_vn.png" alt="">
+        <img class="img-fluid" src="../../../assets/imgs/logo_requa_vn.png" alt="">
       </a>
     </div>
     <div class="cart-sm">
