--- a/src/app/components/auth/address/address/address.component.html
+++ b/src/app/components/auth/address/address/address.component.html
@@ -8,7 +8,7 @@
     <ul>
       <li class="user-info--name">{{this.customer_info?.name}} <span *ngIf="item.status == 1" class="default-address"><i class='bx bx-check-circle'></i> Địa chỉ mặc định</span></li>
       <li class="user-info--address"><span>Địa chỉ:</span> {{item.address}}</li>
-      <li class="user-info--phone"><span>Điện thoại:</span> {{this.customer_info?.phone}}</li>
+      <li class="user-info--phone"><span>Điện thoại:</span> {{item.phone_number}}</li>
     </ul>
 
     <div class="user-infor-address--action">
