--- a/src/app/components/auth/address/address-form/address-form.component.html
+++ b/src/app/components/auth/address/address-form/address-form.component.html
@@ -18,10 +18,14 @@
       <label for="" class="fs13" >Số điện thoại </label>
       <input type="tel" class="form-control" 
             [(ngModel)]="customer_address.phone_number" 
-            name="phone"  #phone="ngModel" required numberOnly>
-      <p *ngIf="userAddressForm.submitted && phone.invalid" class="text-danger fs12 mt-1"> 
+            name="phone"  #phone="ngModel" phoneNumber required numberOnly>
+      <p *ngIf="userAddressForm.submitted && phone?.errors?.required" class="text-danger fs12 mt-1"> 
         Trường này không được bỏ trống
       </p>
+
+      <div *ngIf="userAddressForm.submitted && phone?.errors?.invalidPhonePattern" class="small text-danger mt-1 text-left">
+        Số điện thoại không hợp lệ
+     </div>
     </div>
 
     <div class="form-group">
