--- a/src/app/containers/auth/auth.component.scss
+++ b/src/app/containers/auth/auth.component.scss
@@ -1,7 +1,7 @@
 .user-form{
     margin: auto;
     padding: 15px;
-    height: 300px;
+    max-height: 350px;
     justify-content: space-around;
 }
 
