--- a/src/app/containers/auth/register/register.component.html
+++ b/src/app/containers/auth/register/register.component.html
@@ -10,20 +10,23 @@
   </div>
     <form #registerForm="ngForm" (ngSubmit)="registerForm.form.valid && submit()">
       <div class="form-group">
-        <input [(ngModel)]="customer.name" name="name" #name="ngModel" type="text" class="form-control fs13" placeholder="Nhập họ tên">
-        <div *ngIf="registerForm.submitted && phone.invalid" class="text-danger small mt-1">
+        <input [(ngModel)]="customer.name" name="name" #name="ngModel" type="text" class="form-control fs13" placeholder="Nhập họ tên" required>
+        <div *ngIf="registerForm.submitted && name.invalid" class="text-danger small mt-1">
           Trường này không được bỏ trống
         </div>
       </div>
       <div class="form-group">
-        <input [(ngModel)]="customer.phone" name="phone" #phone="ngModel" type="text" class="form-control fs13" placeholder="Nhập số điện thoại">
-        <div *ngIf="registerForm.submitted && phone.invalid" class="text-danger small mt-1">
+        <input [(ngModel)]="customer.phone" name="phone" #phone="ngModel" type="text" class="form-control fs13" placeholder="Nhập số điện thoại" required phoneNumber>
+        <div *ngIf="registerForm.submitted && phone?.errors?.required" class="text-danger small mt-1">
           Trường này không được bỏ trống
         </div>
+        <div *ngIf="registerForm.submitted && phone?.errors?.invalidPhonePattern" class="small text-danger mt-1 text-left">
+          Số điện thoại không hợp lệ
+       </div>
       </div>
       <div class="form-group">
-        <input [(ngModel)]="customer.password" name="password" #password="ngModel" type="password" class="form-control fs13" placeholder="Nhập mật khẩu">
-        <div *ngIf="registerForm.submitted && phone.invalid" class="text-danger small mt-1">
+        <input [(ngModel)]="customer.password" name="password" #password="ngModel" type="password" class="form-control fs13" placeholder="Nhập mật khẩu" required>
+        <div *ngIf="registerForm.submitted && password?.invalid" class="text-danger small mt-1">
           Trường này không được bỏ trống
         </div>
       </div>
