--- a/src/app/components/auth/customer-info/order-history-detail/order-history-detail.component.html
+++ b/src/app/components/auth/customer-info/order-history-detail/order-history-detail.component.html
@@ -3,8 +3,8 @@
     <p class="mb-1">ĐỊA CHỈ NGƯỜI NHẬN</p>
     <div class="card">
       <p class="fw500">Tùng lee</p>
-      <p class="text-muted fs13">Địa chỉ: Tòa Nhà 97 99 láng hạ, Phường Láng Hạ, Quận Đống Đa, Hà Nội, Việt Nam</p>
-      <p class="text-muted fs11">Điện thoại: 0969296064</p>
+      <p class="text-muted fs13">Địa chỉ: {{orderDetail?.address}}</p>
+      <p class="text-muted fs11">Điện thoại: {{orderDetail?.phone_number}}</p>
     </div>
   </div>
   <div class="col-md-6  order-detail-info order-detail-info__delivery">
